tests/machine/x/c/string_in_operator.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>

static int contains_int(const int *arr, int n, int v) {
    for (int i = 0; i < n; i++) if (arr[i] == v) return 1;
    return 0;
}

int main() {
    int s = "catch";
    printf("%d\n", contains_int(s, sizeof(s)/sizeof(s[0]), "cat"));
    printf("%d\n", contains_int(s, sizeof(s)/sizeof(s[0]), "dog"));
    return 0;
}
